--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "tsc --build tsconfig.prod.json",
+		"clean": "rm -rf dist",
 		"test": "jest",
 		"test-watch": "jest --watch",
 		"watch": "tsc --watch"
