--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "tsc --build tsconfig.prod.json",
+		"build": "tsc --build tsconfig.prod.json && node fix-types.js",
 		"clean": "rm -rf dist",
 		"test": "jest",
 		"test-watch": "jest --watch",
