--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "changeling-examples",
+  "name": "formalities-examples",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "changeling": "file:..",
+    "formalities": "file:../formalities",
     "immer": "^3.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
@@ -11,16 +11,5 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server"
-  },
-  "devDependencies": {
-    "@types/node": "^12.0.2",
-    "@types/react": "^16.8.18",
-    "@types/react-dom": "^16.8.4",
-    "copy-webpack-plugin": "^5.0.3",
-    "ts-loader": "^6.0.1",
-    "typescript": "^3.4.5",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
   }
 }
