--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "changeling",
+	"name": "formalities",
 	"version": "0.2.0",
 	"description": "Immutable component change helper",
 	"main": "dist/index.js",
@@ -18,14 +18,6 @@
 	],
 	"author": "Karl von Randow",
 	"license": "MIT",
-	"devDependencies": {
-		"@types/jest": "^24.0.13",
-		"@types/react": "^16.8.18",
-		"@types/react-dom": "^16.8.4",
-		"jest": "^24.8.0",
-		"ts-jest": "^24.0.2",
-		"typescript": "^3.4.5"
-	},
 	"dependencies": {
 		"immer": "^3.1.2"
 	},
