--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "build": "lerna run build",
+    "test": "lerna run test",
     "watch": "lerna run watch"
   },
   "devDependencies": {
@@ -13,6 +14,7 @@
     "copy-webpack-plugin": "^5.0.3",
     "jest": "^25.1.0",
     "lerna": "^3.20.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.0.1",
     "typescript": "^3.4.5",
