--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -5,11 +5,11 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "tsc --build tsconfig.prod.json && node fix-types.js",
-		"clean": "rm -rf dist",
-		"test": "jest",
-		"test-watch": "jest --watch",
-		"watch": "tsc --watch"
+		"build": "../../node_modules/.bin/tsc --build tsconfig.prod.json && node fix-types.js",
+		"clean": "../../node_modules/.bin/rimraf dist",
+		"test": "../../node_modules/.bin/jest",
+		"test-watch": "../../node_modules/.bin/jest --watch",
+		"watch": "../../node_modules/.bin/tsc --watch"
 	},
 	"keywords": [
 		"immer",
