--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/node": "^12.0.2",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "copy-webpack-plugin": "^5.0.3",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "lerna": "^3.20.2",
     "rimraf": "^3.0.2",
