--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/parser": "^2.23.0",
     "copy-webpack-plugin": "^5.0.3",
     "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "jest": "^25.1.0",
     "lerna": "^3.20.2",
     "rimraf": "^3.0.2",
