--- a/packages/change-controller/tsconfig.prod.json
+++ b/packages/change-controller/tsconfig.prod.json
@@ -1,4 +1,4 @@
 {
 	"extends": "./tsconfig.json",
-	"exclude": ["dist", "examples", "node_modules", "**/*.spec.ts"]
+	"exclude": ["**/*.spec.ts"]
 }
