--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "lerna run build",
     "test": "lerna run test",
-    "watch": "lerna run build && lerna run watch"
+    "watch": "lerna run --parallel watch"
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
