--- a/packages/formalities-hocs/package.json
+++ b/packages/formalities-hocs/package.json
@@ -8,8 +8,7 @@
 		"build": "../../node_modules/.bin/tsc --build tsconfig.prod.json && node fix-types.js",
 		"clean": "../../node_modules/.bin/rimraf dist",
 		"test": "../../node_modules/.bin/jest",
-		"test-watch": "../../node_modules/.bin/jest --watch",
-		"watch": "../../node_modules/.bin/tsc --watch"
+		"test-watch": "../../node_modules/.bin/jest --watch"
 	},
 	"keywords": [
 		"immer",
