--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "examples-hocs",
+  "name": "examples",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "formalities-hocs": "file:../formalities-hocs",
+    "formalities": "file:../formalities",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
