--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "formalities",
-	"version": "0.2.0",
+	"version": "0.0.0",
 	"description": "React form helpers for immutable state",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -18,7 +18,7 @@
 	"author": "Karl von Randow",
 	"license": "MIT",
 	"dependencies": {
-		"change-controller": "file:../change-controller"
+		"immutable-state-controller": "^0.1.0"
 	},
 	"peerDependencies": {
 		"react": "^16.8.6",
