npm: add keywords

--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -13,7 +13,8 @@
 	"keywords": [
 		"immer",
 		"forms",
-		"onChange"
+		"react",
+		"immutable"
 	],
 	"author": "Karl von Randow",
 	"license": "MIT",
