--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -27,6 +27,6 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/karlvr/changeling.git"
+		"url": "https://github.com/karlvr/formalities.git"
 	}
 }
