--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"build": "../../node_modules/.bin/tsc --build tsconfig.prod.json",
 		"clean": "../../node_modules/.bin/rimraf dist",
+		"prepare": "npm run build",
 		"test-watch": "../../node_modules/.bin/jest --watch",
 		"watch": "../../node_modules/.bin/tsc --watch"
 	},
