npm: add release and clean scripts

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "scripts": {
     "build": "lerna run build",
+    "clean": "lerna clean --yes && lerna run clean",
+    "release": "npm run clean && npm run build && npm test && lerna publish",
     "test": "lerna run test",
     "watch": "lerna run --parallel watch"
   },
