--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "fast-deep-equal": "^3.1.1",
+    "immutable-state-controller": "^0.1.3",
     "jest": "^25.5.4",
     "lerna": "^3.22.1",
     "rimraf": "^3.0.2",
