--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"author": "Karl von Randow",
 	"license": "MIT",
 	"dependencies": {
-		"immer": "^6.0.1"
+		"immer": ">6.0.1"
 	},
 	"devDependencies": {
 		"@types/jest": "^25.1.4",
