--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -8,6 +8,7 @@
 		"build": "../../node_modules/.bin/tsc --build tsconfig.prod.json",
 		"clean": "../../node_modules/.bin/rimraf dist",
 		"prepare": "npm run build",
+		"test": "../../node_modules/.bin/jest",
 		"test-watch": "../../node_modules/.bin/jest --watch",
 		"watch": "../../node_modules/.bin/tsc --watch"
 	},
