--- a/package.json
+++ b/package.json
@@ -10,31 +10,32 @@
     "watch": "lerna run --parallel watch"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "@types/react": "^16.14.4",
-    "@types/react-dom": "^16.9.11",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^16.14.5",
+    "@types/react-dom": "^16.9.12",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "babel-eslint": "^10.1.0",
-    "copy-webpack-plugin": "^6.4.1",
-    "eslint": "^7.20.0",
+    "copy-webpack-plugin": "^8.1.1",
+    "eslint": "^7.24.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.3.0",
+    "eslint-plugin-flowtype": "^5.6.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fast-deep-equal": "^3.1.1",
-    "immutable-state-controller": "^0.4.0",
+    "immutable-state-controller": "^0.4.1",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.1",
-    "ts-loader": "^8.0.17",
-    "typescript": "^4.1.5",
-    "webpack": "^5.24.0",
-    "webpack-cli": "^4.5.0",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.1.0",
+    "tslib": "^2.2.0",
+    "typescript": "^4.2.4",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
