--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
 	"author": "Karl von Randow",
 	"license": "MIT",
 	"dependencies": {
-		"immer": ">6.0.1"
+		"immer": ">=6"
 	},
 	"devDependencies": {
-		"@types/jest": "^26.0.22",
-		"@types/node": "^14.14.37",
-		"@typescript-eslint/eslint-plugin": "^4.21.0",
-		"@typescript-eslint/parser": "^4.21.0",
+		"@changesets/cli": "^2.17.0",
+		"@types/jest": "^27.0.2",
+		"@types/node": "^16.11.1",
+		"@typescript-eslint/eslint-plugin": "^5.1.0",
+		"@typescript-eslint/parser": "^5.1.0",
 		"babel-eslint": "^10.1.0",
-		"eslint": "^7.24.0",
-		"jest": "^26.6.3",
-		"ts-jest": "^26.5.4",
-		"typescript": "^4.2.4"
+		"eslint": "^8.0.1",
+		"jest": "^27.3.1",
+		"ts-jest": "^27.0.7",
+		"typescript": "^4.4.4"
 	},
 	"repository": {
 		"type": "git",
