--- a/package.json
+++ b/package.json
@@ -2,44 +2,34 @@
   "name": "formalities-root",
   "private": true,
   "scripts": {
-    "build": "lerna run build",
-    "clean": "lerna clean --yes && lerna run clean",
-    "link": "lerna run link",
-    "release": "npm run clean && npm run build && npm test && lerna publish",
-    "test": "lerna run test",
-    "watch": "lerna run --parallel watch"
+    "build": "pnpm build --recursive",
+    "clean": "pnpm clean --recursive",
+    "clean:node": "pnpm --recursive exec rm -rf node_modules",
+    "link": "pnpm --recursive --workspace-concurrency=1 exec pnpm link --global",
+    "release": "pnpm clean && pnpm build && pnpm test && pnpx changeset publish && pnpm install",
+    "release:version": "pnpm changeset version && pnpm install",
+    "test": "pnpm test --recursive --workspace-concurrency 1",
+    "watch": "pnpm watch --parallel"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/react": "^16.14.5",
-    "@types/react-dom": "^16.9.12",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "babel-eslint": "^10.1.0",
-    "copy-webpack-plugin": "^8.1.1",
-    "eslint": "^7.24.0",
+    "@babel/eslint-parser": "^7.15.8",
+    "@changesets/cli": "^2.17.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint": "^8.0.1",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.6.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-flowtype": "^6.1.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "fast-deep-equal": "^3.1.1",
     "immutable-state-controller": "^0.4.1",
-    "jest": "^26.6.3",
-    "lerna": "^3.22.1",
+    "jest": "^27.3.1",
+    "react": "^17.0.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.4",
-    "ts-loader": "^8.1.0",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.31.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "examples": "file:packages/examples",
-    "formalities": "file:packages/formalities"
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   }
 }
