--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -3,12 +3,25 @@
   "version": "0.8.1",
   "private": true,
   "dependencies": {
-    "formalities": "file:../formalities",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "formalities": "0.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
-    "build": "../../node_modules/.bin/webpack",
-    "start": "../../node_modules/.bin/webpack-dev-server"
+    "build": "webpack",
+    "start": "webpack-dev-server"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@types/react": "^17.0.31",
+    "@types/react-dom": "^17.0.10",
+    "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^9.0.1",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   }
 }
