--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-	"name": "immutable-state-controller",
-	"version": "0.4.1",
-	"description": "Immutable state change controller",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"name": "immutable-state-controller-root",
+	"version": "0.0.1",
+	"private": true,
 	"scripts": {
-		"build": "tsc --build tsconfig.prod.json",
-		"clean": "rimraf dist",
-		"prepare": "npm run build",
-		"test": "jest",
-		"test-watch": "jest --watch",
-		"watch": "tsc --watch"
+		"build": "pnpm build --recursive",
+		"clean": "pnpm clean --recursive",
+		"clean:node": "pnpm --recursive exec rm -rf node_modules",
+		"link": "pnpm --recursive --workspace-concurrency=1 exec pnpm link --global",
+		"release": "pnpm clean && pnpm build && pnpm test && pnpx changeset publish && pnpm install",
+		"release:version": "pnpm changeset version && pnpm install",
+		"test": "pnpm test --recursive --workspace-concurrency 1",
+		"watch": "pnpm watch --parallel"
 	},
 	"keywords": [
 		"immer"
 	],
 	"author": "Karl von Randow",
 	"license": "MIT",
-	"dependencies": {
-		"immer": ">=6"
-	},
 	"devDependencies": {
 		"@changesets/cli": "^2.17.0",
 		"@types/jest": "^27.0.2",
