--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.0",
   "description": "React hooks for the Immutable state change controller",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc --build tsconfig.prod.json",
     "clean": "rimraf dist",
