--- a/package.json
+++ b/package.json
@@ -18,14 +18,22 @@
 	"author": "Karl von Randow",
 	"license": "MIT",
 	"devDependencies": {
+		"@babel/eslint-parser": "^7.15.8",
 		"@changesets/cli": "^2.17.0",
 		"@types/jest": "^27.0.2",
 		"@types/node": "^16.11.1",
 		"@typescript-eslint/eslint-plugin": "^5.1.0",
 		"@typescript-eslint/parser": "^5.1.0",
-		"babel-eslint": "^10.1.0",
-		"eslint": "^8.0.1",
+		"eslint": "^7.32.0",
+		"eslint-config-react-app": "^6.0.0",
+		"eslint-plugin-flowtype": "^6.1.1",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-jest": "^25.2.2",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-react": "^7.26.1",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"jest": "^27.3.1",
+		"react": "^17.0.2",
 		"ts-jest": "^27.0.7",
 		"typescript": "^4.4.4"
 	},
