--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"author": "Karl von Randow",
 	"license": "MIT",
 	"devDependencies": {
+		"@babel/core": "^7.15.8",
 		"@babel/eslint-parser": "^7.15.8",
 		"@changesets/cli": "^2.17.0",
 		"@types/jest": "^27.0.2",
