--- a/packages/react-example/package.json
+++ b/packages/react-example/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "webpack",
+    "lint": "eslint",
     "start": "webpack-dev-server"
   },
   "devDependencies": {
