--- a/packages/immutable-state-controller/package.json
+++ b/packages/immutable-state-controller/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc --build tsconfig.prod.json",
     "clean": "rimraf dist",
+    "lint": "eslint",
     "test": "jest",
     "test-watch": "jest --watch",
     "watch": "tsc --watch"
