--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc --build tsconfig.prod.json",
     "clean": "rimraf dist",
+    "lint": "eslint",
     "watch": "tsc --watch"
   },
   "author": "Karl von Randow",
