--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "clean": "pnpm clean --recursive",
     "clean:node": "pnpm --recursive exec rm -rf node_modules",
     "link": "pnpm --recursive --workspace-concurrency=1 exec pnpm link --global",
-    "release": "pnpm clean && pnpm build && pnpm test && pnpx changeset publish && pnpm install",
+    "lint": "pnpm lint --recursive",
+    "release": "pnpm clean && pnpm build && pnpm lint && pnpm test && pnpx changeset publish && pnpm install",
     "release:version": "pnpm changeset version && pnpm install",
     "test": "pnpm test --recursive --workspace-concurrency 1",
     "watch": "pnpm watch --parallel"
@@ -15,21 +16,23 @@
     "@babel/eslint-parser": "^7.15.8",
     "@changesets/cli": "^2.17.0",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "eslint": "^8.0.1",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^7.32.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^6.1.1",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "immutable-state-controller": "^0.4.1",
     "jest": "^27.3.1",
     "react": "^17.0.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "react-immutable-state-controller": "^0.9.1"
   }
 }
