--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"build": "../../node_modules/.bin/tsc --build tsconfig.prod.json",
 		"clean": "../../node_modules/.bin/rimraf dist",
+		"lint": "eslint",
 		"prepare": "npm run build",
 		"test": "../../node_modules/.bin/jest",
 		"test-watch": "../../node_modules/.bin/jest --watch",
