--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -23,7 +23,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"fast-deep-equal": "^3.1.1",
-		"immutable-state-controller": "^0.4.1"
+		"immutable-state-controller": "^0.9.0",
+		"react-immutable-state-controller": "^0.9.1"
 	},
 	"peerDependencies": {
 		"react": ">=16.8",
