--- a/packages/react-example/package.json
+++ b/packages/react-example/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.5",
   "private": true,
   "dependencies": {
-    "react-immutable-state-controller": "1.0.1",
+    "empire-state-react": "0.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
