immutable-state-controller renamed to empire-state

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "pnpm clean --recursive",
     "clean:node": "pnpm --recursive exec rm -rf node_modules",
     "link": "pnpm --recursive --workspace-concurrency=1 exec pnpm link --global",
-    "link-immutable-state-controller": "pnpm link --global immutable-state-controller && pnpm link --global react-immutable-state-controller",
+    "link-empire-state": "pnpm link --global empire-state && pnpm link --global empire-state-react",
     "lint": "pnpm lint --recursive",
     "release": "pnpm clean && pnpm build && pnpm lint && pnpm test && pnpx changeset publish && pnpm install",
     "release:version": "pnpm changeset version && pnpm install",
@@ -32,9 +32,5 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2"
-  },
-  "dependencies": {
-    "immutable-state-controller": "^1.0.0",
-    "react-immutable-state-controller": "^1.0.1"
   }
 }
