--- a/packages/formalities/package.json
+++ b/packages/formalities/package.json
@@ -23,8 +23,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"fast-deep-equal": "^3.1.1",
-		"immutable-state-controller": "^1.0.0",
-		"react-immutable-state-controller": "^1.0.1"
+		"empire-state": "^0.9.0",
+		"empire-state-react": "^0.9.0"
 	},
 	"peerDependencies": {
 		"react": ">=16.8",
