--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
 	"window.title": "${activeEditorShort}${separator}${rootName}",
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
-	}
+	},
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
