--- a/packages/forms-examples/package.json
+++ b/packages/forms-examples/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "formalities": "1.0.1",
+    "empire-state-forms": "1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
