--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,17 +1,16 @@
 {
-	"name": "formalities",
-	"version": "1.0.1",
+	"name": "empire-state-forms",
+	"version": "1.0.0",
 	"description": "React form helpers for immutable state",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "../../node_modules/.bin/tsc --build tsconfig.prod.json",
-		"clean": "../../node_modules/.bin/rimraf dist",
+		"build": "tsc --build tsconfig.prod.json",
+		"clean": "rimraf dist",
 		"lint": "eslint",
-		"prepare": "npm run build",
-		"test": "../../node_modules/.bin/jest",
-		"test-watch": "../../node_modules/.bin/jest --watch",
-		"watch": "../../node_modules/.bin/tsc --watch"
+		"test": "jest",
+		"test-watch": "jest --watch",
+		"watch": "tsc --watch"
 	},
 	"keywords": [
 		"immer",
@@ -23,8 +22,11 @@
 	"license": "MIT",
 	"dependencies": {
 		"fast-deep-equal": "^3.1.1",
-		"empire-state": "^1.0.0",
-		"empire-state-react": "^1.0.0"
+		"empire-state": "1.0.0",
+		"empire-state-react": "1.0.0"
+	},
+	"devDependencies": {
+	  "rimraf": "^3.0.2"
 	},
 	"peerDependencies": {
 		"react": ">=16.8",
