--- a/packages/forms-examples/package.json
+++ b/packages/forms-examples/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "examples",
+  "name": "form-examples",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "empire-state-forms": "1.1.0",
+    "empire-state-forms": "1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
