--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"link": "pnpm --recursive --workspace-concurrency=1 exec pnpm link --global",
 		"lint": "pnpm lint --recursive",
 		"release": "pnpm clean && pnpm build && pnpm lint && pnpm test && pnpx changeset publish && pnpm install",
-		"release:version": "pnpm changeset version && pnpm install",
+		"release:version": "pnpm changeset version && pnpm install && pnpm build",
 		"test": "pnpm test --recursive --workspace-concurrency 1",
 		"watch": "pnpm watch --parallel"
 	},
