--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@1.6.1/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "linked": [["empire-state", "empire-state-react"]],
+  "linked": [["empire-state", "empire-state-react", "empire-state-forms"]],
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
