--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "empire-state",
-  "version": "1.13.0",
+  "version": "1.14.0-next.0",
   "description": "Immutable state change controller",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
