--- a/packages/forms-examples/package.json
+++ b/packages/forms-examples/package.json
@@ -1,9 +1,9 @@
 {
   "name": "form-examples",
-  "version": "1.1.11",
+  "version": "1.2.0-next.0",
   "private": true,
   "dependencies": {
-    "empire-state-forms": "1.13.0",
+    "empire-state-forms": "1.14.0-next.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
