--- a/packages/react-example/package.json
+++ b/packages/react-example/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-examples",
-  "version": "0.12.9",
+  "version": "0.13.0-next.0",
   "private": true,
   "dependencies": {
-    "empire-state-react": "1.13.0",
+    "empire-state-react": "1.14.0-next.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
