Add match-deps script to aid linking during development

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"clean:node": "rm -rf node_modules && pnpm --recursive exec rm -rf node_modules",
 		"link": "pnpm --recursive --workspace-concurrency=1 exec pnpm link --global",
 		"lint": "pnpm --recursive lint",
+		"match-deps": "./scripts/match-deps.sh",
 		"prepublish": "pnpm clean && pnpm build && pnpm lint && pnpm test",
 		"release": "pnpm changeset publish && pnpm install",
 		"release:version": "pnpm changeset version && pnpm install && pnpm build",
