--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"engines": {
-		"node": "^16.15.1",
+		"node": "18",
 		"pnpm": ">=7.4.0"
 	},
 	"scripts": {
