--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
 	],
 	"window.title": "${activeEditorShort}${separator}${rootName}",
 	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": true
+		"source.fixAll.eslint": "explicit"
 	},
 	"typescript.tsdk": "node_modules/typescript/lib"
 }
