--- a/packages/react-example/package.json
+++ b/packages/react-example/package.json
@@ -3,7 +3,7 @@
   "version": "0.13.1",
   "private": true,
   "dependencies": {
-    "empire-state-react": "1.16.0",
+    "empire-state-react": "workspace:*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
