chore: build and test before release

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
 		"link": "pnpm --recursive --workspace-concurrency=1 exec pnpm link --global",
 		"lint": "pnpm --recursive lint",
 		"match-deps": "./scripts/match-deps.sh",
-		"prepublish": "pnpm clean && pnpm build && pnpm lint && pnpm test",
-		"release": "pnpm changeset publish && pnpm install",
+		"release": "pnpm clean && pnpm build && pnpm lint && pnpm test && pnpm changeset publish && pnpm install",
 		"release:version": "pnpm changeset version && pnpm install && pnpm build",
 		"test": "pnpm --recursive --workspace-concurrency 1 test",
 		"watch": "pnpm --parallel watch"
